center alignment bug fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -362,6 +362,7 @@ About
 */
 .about-img, .about-info{
     padding: 2rem 0;
+    text-align: center;
 }
 .about-picture-container{
     background: var(--clr-primary);
@@ -369,6 +370,8 @@ About
     max-width: 30rem;
     /* extra stuff */
     overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
 }
 .about-picture{
     transition: var(--transition);
@@ -380,6 +383,8 @@ About
 .about-text{
     max-width: 26rem;
     color: var(--clr-grey-5);
+    margin-left: auto;
+    margin-right: auto;
 }
 @media screen and (min-width:992px){
     .about-img, .about-info{
@@ -400,10 +405,13 @@ Products
 }
 .products article{
     padding: 2rem 0;
+    text-align: center;
 }
 .product-text{
     color: var(--clr-grey-5);
     max-width: 26rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .product-img{
